# biblei

./: .gitignore  Cargo.toml  README.md  config.yml  eslint.config.js  makefile  package.json  prettier.config.js  pyproject.toml  rustfmt.toml  tsconfig.json
apps/: README.md  init.sh
apps/fetchbib/: Cargo.toml  README.md
apps/fetchbib/src/: gen_id.rs  main.rs
apps/fetchlex/: Cargo.toml  README.md
apps/fetchlex/src/: main.rs
apps/filltag/: Cargo.toml  README.md
apps/filltag/src/: main.rs
apps/parsenouns/: README.md  __init__.py  __main__.py  pyproject.toml
apps/parserec/: Cargo.toml  README.md  test_records.yml
apps/parserec/examples/: test_tags.rs
apps/parserec/src/: date.rs  lib.rs  main.rs  quotes.rs  record.rs  string.rs  tags.rs
apps/viztime/: README.md  package.json  pages.yml  tsconfig.browser.json  tsconfig.json  tsconfig.server.json
apps/viztime/browser/: main.ts
apps/viztime/server/: build.ts  page.ts  path.ts  records.ts
apps/viztime/static/: styles.css
apps/viztime/templates/: layout.liquid  page.liquid  timeline.liquid
apps/viztime/templates/partials/: footer.liquid
e2e/: README.md  conftest.py  test_fetchbib.py  test_fetchlex.py  test_filltag.py  test_parsenouns.py  test_parserec.py
e2e/fetchbib/case01_basic/: expected_bib.json  zotero_response.json
e2e/fetchlex/case01_basic/: expected_lexique.csv  lexique_response.tsv
e2e/filltag/case01_basic/: dict.yml  expected_tag_match.csv  expected_tags.json  lexique.csv
e2e/parsenouns/case01_basic/: exected_nouns.csv  records.yml  tags.json
e2e/parserec/case01_basic/: expected_records.json  records.yml
e2e/parserec/case02_quotes/: expected_records.json  records.yml
