[package]
name = "fetchlex"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "stream"] }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
tokio = { version = "1.0", features = ["io-util", "rt"] }
